--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "aws-sdk": "^2.1692.0",
     "cors": "^2.8.5",
     "csv-parse": "^5.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "fs": "^0.0.1-security",
+    "mime-types": "^2.1.35",
     "mongoose": "^8.8.4",
     "mongoose-sequence": "^6.0.1",
     "multer": "^1.4.5-lts.1",
