--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
   "description": "",
   "dependencies": {
     "aws-sdk": "^2.1692.0",
+    "cache-manager": "^6.3.2",
+    "cache-manager-redis-store": "^3.0.1",
     "cors": "^2.8.5",
     "csv-parse": "^5.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "flat": "^6.0.1",
     "fs": "^0.0.1-security",
     "mime-types": "^2.1.35",
     "mongoose": "^8.8.4",
     "mongoose-sequence": "^6.0.1",
     "multer": "^1.4.5-lts.1",
+    "node-cache": "^5.1.2",
     "openai": "^4.73.0",
     "xlsx": "^0.18.5"
   }
