--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "multer": "^1.4.5-lts.1",
     "node-cache": "^5.1.2",
     "openai": "^4.79.1",
+    "uuid": "^11.0.5",
     "xlsx": "^0.18.5"
   }
 }
